syntax = "proto3";

package movementAdapter;

option go_package = "/moveAdapter";

// Define the direction enum
enum RobotDirection {
    LEFT = 0;
    RIGHT = 1;
    UP = 2;
    DOWN = 3;
    BACKWARD = 4;
    FORWARD = 5;
    OPEN = 6;
    CLOSE = 7;
}

// Request message with direction
message MoveRequest {
    RobotDirection direction = 1;
}

// Response message
message MoveResponse {
    bool success = 1;
}

// gRPC service
service MoveAdapter {
    rpc Move(MoveRequest) returns (MoveResponse);
}